Filter contrast fix.

--- a/docroot/profiles/custom/sitenow/css/admin-overrides.css
+++ b/docroot/profiles/custom/sitenow/css/admin-overrides.css
@@ -81,3 +81,9 @@ table.diff.diff-responsive-table td {
 .js .js-hide {
   display: none !important;
 }
+
+/* Toolbar overrides. */
+.toolbar-toggle-orientation .toolbar-icon-toggle-horizontal:before,
+.toolbar-toggle-orientation .toolbar-icon-toggle-vertical:before{
+  filter: brightness(0.58);
+}
